--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -5,7 +5,7 @@
     <div class="container">
 
       <!-- Brand -->
-      <a class="navbar-brand waves-effect" href="http://127.0.0.1:8000">
+      <a class="navbar-brand waves-effect" href={% url 'core:home' %}>
         <strong style="color:#f44336">ARWA</strong>
       </a>
 
