--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
     <style>
 
         main {
-            background: linear-gradient(to bottom, rgba(179, 179, 100, 0.466), rgba(176, 224, 167, 0.87)), url('../img/sample.jpg') fixed;
+            background: linear-gradient(to bottom, rgba(179, 179, 100, 0.466), rgba(176, 224, 167, 0.87)) fixed;
         }
     </style>
 
