fixed categories image on home

--- a/templates/home.html
+++ b/templates/home.html
@@ -212,7 +212,7 @@
             <div class="col-md-6  col-lg-4 mb-4">
               <div class="card">
                 <div class="view overlay zoom">
-                  <img src={{ item.image }} class="card-img-top img-fluid">
+                  <img src={{ item.image.url }} class="card-img-top img-fluid">
                   <a href="{{ item.get_absolute_url }}">
                     <div class="mask rgba-white-slight"></div>
                   </a>
